tests/cases/parser/expected/expected_expr_after_match.hash
// stage=parse, run=fail
main := () => {
    // ~ERROR: expected expression after match
    match
}
